added contact details and calendar link

--- a/index.html
+++ b/index.html
@@ -61,5 +61,6 @@
 <h1>Acroyoga Ottawa Community Calendar</h1>
 <div id='loading' style='display:none'>loading...</div>
 <div id='calendar'></div>
+<center>Contact Greg@gho.st to get access to post on this calendar. Click <a href='http://www.google.com/calendar/ical/gho.st_19b0g4d2m46ta2l2gf8olt1k6o%40group.calendar.google.com/public/basic.ics'>here</a> to add this calendar to your device.</center>
 </body>
 </html>
