added some better text

--- a/index.html
+++ b/index.html
@@ -58,9 +58,13 @@
 </style>
 </head>
 <body>
-<h1>Acroyoga Ottawa Community Calendar</h1>
+<h1>Acroyoga Ottawa Event Calendar</h1>
+<h2></h2>
 <div id='loading' style='display:none'>loading...</div>
 <div id='calendar'></div>
-<center>Contact Greg@gho.st to get access to post on this calendar. Click <a href='http://www.google.com/calendar/ical/gho.st_19b0g4d2m46ta2l2gf8olt1k6o%40group.calendar.google.com/public/basic.ics'>here</a> to add this calendar to your device.</center>
+Acroyoga is acrobatics with a yogic consciousness, no experience is neccessary to come and play. Jams are informal gatherings to play and practice. Classes develop your Acroyoga practice in a more formal settings. And Workshops are great for deepen your practice.<br>
+Ottawa's Acroyoga Community welcomes you to join us on <a href="https://www.facebook.com/groups/AcroyogaOttawa/">Facebook</a> and <a href="https://twitter.com/AcroyogaOttawa">Twitter</a> or follow our <a href="http://www.pinterest.com/gregology/acroyoga-ottawa/">Pintrest</a> board for insperation.<br>
+
+If you wish to post to the calendar please contact Greg@gho.st. Click <a href='http://www.google.com/calendar/ical/gho.st_19b0g4d2m46ta2l2gf8olt1k6o%40group.calendar.google.com/public/basic.ics'>here</a> to add this calendar to your device.
 </body>
 </html>
