--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@
 <h2></h2>
 <div id='loading' style='display:none'>loading...</div>
 <div id='calendar'></div>
-Acroyoga is acrobatics with a yogic consciousness, no experience is neccessary to come and play. Jams are informal gatherings to play and practice. Classes develop your Acroyoga practice in a more formal settings. And Workshops are great for deepen your practice.<br>
-Ottawa's Acroyoga Community welcomes you to join us on <a href="https://www.facebook.com/groups/AcroyogaOttawa/">Facebook</a> and <a href="https://twitter.com/AcroyogaOttawa">Twitter</a> or follow our <a href="http://www.pinterest.com/gregology/acroyoga-ottawa/">Pintrest</a> board for insperation.<br>
-
-If you wish to post to the calendar please contact Greg@gho.st. Click <a href='http://www.google.com/calendar/ical/gho.st_19b0g4d2m46ta2l2gf8olt1k6o%40group.calendar.google.com/public/basic.ics'>here</a> to add this calendar to your device.
+Acroyoga is acrobatics with a yogic consciousness, no experience is neccessary to come and play. Jams are informal gatherings to play and practice.<br>
+Classes develop your Acroyoga practice in a more formal settings. And Workshops are great for deepen your practice.<br>
+Please join the community, join our <a href="https://www.facebook.com/groups/AcroyogaOttawa/">Facebook group</a>, follow us on <a href="https://twitter.com/AcroyogaOttawa">Twitter</a> or start pinning insperation to <a href="http://www.pinterest.com/gregology/acroyoga-ottawa/">Pintrest</a>.<br>
+If you would like to have a similar page for your own Acroyoga Community, <a href="https://github.com/AcroyogaOttawa/AcroyogaOttawa.github.io">Fork</a> us on GitHub.
+To get access to post on this calendar please contact Greg@gho.st. Click <a href='http://www.google.com/calendar/ical/gho.st_19b0g4d2m46ta2l2gf8olt1k6o%40group.calendar.google.com/public/basic.ics'>here</a> to add this calendar to your device.<br>
 </body>
 </html>
