--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 		$('#calendar').fullCalendar({
 		
-			// US Holidays
+			// Acroyoga Ottawa Community Calendar
 			events: 'http://www.google.com/calendar/feeds/gho.st_19b0g4d2m46ta2l2gf8olt1k6o@group.calendar.google.com/public/basic',
 			
 			eventClick: function(event) {
@@ -62,10 +62,10 @@
 <h2></h2>
 <div id='loading' style='display:none'>loading...</div>
 <div id='calendar'></div>
-<p>Acroyoga is acrobatics with a yogic consciousness, no experience is neccessary to come and play. Jams are informal gatherings to play and<br>
-practice. Classes develop your Acroyoga practice in a more formal settings. And Workshops are great for deepen your practice.<br>
+<p>Acroyoga is acrobatics with a yogic consciousness, no experience is neccessary to come and play. Jams are informal gatherings to play<br>
+and practice. Classes develop your Acroyoga practice in a more formal settings. And Workshops are great for deepen your practice.<br>
 Join our <a href="https://www.facebook.com/groups/AcroyogaOttawa/">Facebook group</a>, follow us on <a href="https://twitter.com/AcroyogaOttawa">Twitter</a> or start pinning inspiration to <a href="http://www.pinterest.com/gregology/acroyoga-ottawa/">Pintrest</a>.<br>
-If you would like to have a similar page for your own Acroyoga Community, <a href="https://github.com/AcroyogaOttawa/AcroyogaOttawa.github.io">Fork</a> us on GitHub.<br>
+<a href="https://github.com/AcroyogaOttawa/AcroyogaOttawa.github.io">Fork</a> us on GitHub to setup a similar Calendar for your own Acroyoga Community.<br>
 To get access to post on this calendar please contact Greg@gho.st. Click <a href='http://www.google.com/calendar/ical/gho.st_19b0g4d2m46ta2l2gf8olt1k6o%40group.calendar.google.com/public/basic.ics'>here</a> to add this calendar to your device.</p>
 </body>
 </html>
