Added Instagram grid

--- a/index.html
+++ b/index.html
@@ -70,7 +70,11 @@
 <div id='calendar'></div>
 <div id='footer'> 
 <p>Acroyoga is acrobatics with a yogic consciousness, no experience is necessary to come and play. Jams are informal gatherings to play and practice. Classes develop your Acroyoga practice in a more formal settings. And Workshops are great for deepen your practice.
-Join our <a href="https://www.facebook.com/groups/AcroyogaOttawa/">Facebook group</a>, follow us on <a href="https://twitter.com/AcroyogaOttawa">Twitter</a> or start pinning inspiration to <a href="http://www.pinterest.com/gregology/acroyoga-ottawa/">Pintrest</a>. <a href="https://github.com/AcroyogaOttawa/AcroyogaOttawa.github.io">Fork</a> us on GitHub to setup a similar Calendar for your own Acroyoga Community.<br>
+Join our <a href="https://www.facebook.com/groups/AcroyogaOttawa/">Facebook group</a>, follow us on <a href="https://twitter.com/AcroyogaOttawa">Twitter</a> or start sharing #AcroyogaOttawa on Instagram or pinning inspiration to <a href="http://www.pinterest.com/gregology/acroyoga-ottawa/">Pintrest</a>. <a href="https://github.com/AcroyogaOttawa/AcroyogaOttawa.github.io">Fork</a> us on GitHub to setup a similar Calendar for your own Acroyoga Community.<br>
 To get access to post on this calendar please contact Greg (Greg@smileyom.org). Click <a href='http://www.google.com/calendar/ical/gho.st_19b0g4d2m46ta2l2gf8olt1k6o%40group.calendar.google.com/public/basic.ics'>here</a> to add this calendar to your device.</p></div>
+
+<!-- SnapWidget -->
+<iframe src="http://snapwidget.com/in/?h=YWNyb3lvZ2FvdHRhd2F8aW58MTI1fDZ8M3x8bm98NXxub25lfG9uU3RhcnR8eWVz&v=27214" title="Instagram Widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:780px; height:390px"></iframe>
+
 </body>
 </html>
