--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <div id='footer'> 
 <p>Acroyoga is acrobatics with a yogic consciousness, no experience is necessary to come and play. Jams are informal gatherings to play and practice. Classes develop your Acroyoga practice in a more formal settings. And Workshops are great to deepen your practice.
 Join our <a href="https://www.facebook.com/groups/AcroyogaOttawa/">Facebook group</a>, follow us on <a href="https://twitter.com/AcroyogaOttawa">Twitter</a> or start sharing #AcroyogaOttawa on Instagram or pinning inspiration to <a href="http://www.pinterest.com/gregology/acroyoga-ottawa/">Pinterest</a>. <a href="https://github.com/AcroyogaOttawa/AcroyogaOttawa.github.io">Fork</a> us on GitHub to setup a similar Calendar for your own Acroyoga Community.<br>
-To get access to post on this calendar please contact Greg (Greg@smileyom.org). Click <a href='http://www.google.com/calendar/ical/gho.st_19b0g4d2m46ta2l2gf8olt1k6o%40group.calendar.google.com/public/basic.ics'>here</a> to add this calendar to your device.</p></div>
+To get access to post on this calendar please contact Greg (Greg@smileyom.org). Click <a href='http://www.google.com/calendar/ical/gho.st_19b0g4d2m46ta2l2gf8olt1k6o%40group.calendar.google.com/public/basic.ics'>here</a> to add this calendar to your device or explore these events on a <a href="http://chadnorwood.com/gcm/?z=13&;lat=45.408759&lng=-75.689038&m=-1&sd=0&ed=42&cd=undefined&gc=gho.st_19b0g4d2m46ta2l2gf8olt1k6o@group.calendar.google.com">Google Map</a>.</p></div>
 <h2>#AcroyogaOttawa Instagram Feed</h2>
 <div id="instafeed"></div>
 
