--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
     var feed = new Instafeed({
         get: 'tagged',
         tagName: 'AcroyogaOttawa',
-        clientId: '4c0caa35855143e788ca790012daaa3b'
+        clientId: '4c0caa35855143e788ca790012daaa3b',
+        limit: 12,
+        resolution: low_resolution
     });
     feed.run();
 </script>
