--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         get: 'tagged',
         tagName: 'AcroyogaOttawa',
         clientId: '4c0caa35855143e788ca790012daaa3b',
-        limit: 12,
-        resolution: low_resolution
+        limit: '12',
+        resolution: 'low_resolution'
     });
     feed.run();
 </script>
