fixed typos and added start time for jams

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 <div id='calendar'></div>
 <div id='footer'> 
 <h3>Definitions</h3>
-<p>Jams: Informal gatherings to play and practice, no formal instruciton.<br>
-Classes: Weekly formal instruciton to develop your Acroyoga practice.<br>
+<p>Jams: Informal gatherings to play and practice, no formal instruction or start time. Turn up whenever you want.<br>
+Classes: Weekly formal instruction to develop your Acroyoga practice.<br>
 Workshops: A more indepth Acroyoga experience.</p>
 
 <h3>Social</h3>
