Added Smiley Om Yoga link

--- a/index.html
+++ b/index.html
@@ -111,6 +111,6 @@ Workshops: A more indepth Acroyoga experience.</p>
 <h2>#AcroyogaOttawa Instagram Feed</h2>
 <div id="instafeed"></div>
 </div>
-
+<h5>Created by Diana Lam and Greg Clarke of <a href='http://SmileyOm.org'>Smiley Om Yoga</a>.</h5>
 </body>
 </html>
