move all javascript into js dir

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <link href='js/fullcalendar.css' rel='stylesheet' />
 <link href='js/fullcalendar.print.css' rel='stylesheet' media='print' />
-<script src='lib/jquery.min.js'></script>
-<script src='lib/jquery-ui.custom.min.js'></script>
+<script src='js/jquery.min.js'></script>
+<script src='js/jquery-ui.custom.min.js'></script>
 <script src='js/fullcalendar.min.js'></script>
 <script src='js/gcal.js'></script>
 <script type="text/javascript" src="js/instafeed.min.js"></script>
