added calendar map

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Classes: Weekly formal instruction to develop your Acroyoga practice.<br>
 Workshops: A more indepth Acroyoga experience.</p>
 
 <h3>Social</h3>
-<p><a href="https://www.facebook.com/groups/AcroyogaOttawa/">Facebook</a> - <a href='http://www.google.com/calendar/ical/gho.st_19b0g4d2m46ta2l2gf8olt1k6o%40group.calendar.google.com/public/basic.ics'>Google Calendar</a> - <a href="https://twitter.com/AcroyogaOttawa">Twitter</a> - <a href="http://www.pinterest.com/gregology/acroyoga-ottawa/">Pinterest</a></p>
+<p><a href="https://www.facebook.com/groups/AcroyogaOttawa/">Facebook</a> - <a href='http://www.google.com/calendar/ical/gho.st_19b0g4d2m46ta2l2gf8olt1k6o%40group.calendar.google.com/public/basic.ics'>Google Calendar</a> - <a href='http://chadnorwood.com/gcm/?gc=gho.st_19b0g4d2m46ta2l2gf8olt1k6o@group.calendar.google.com'>Events map</a> - <a href="https://twitter.com/AcroyogaOttawa">Twitter</a> - <a href="http://www.pinterest.com/gregology/acroyoga-ottawa/">Pinterest</a></p>
 
 <h3>References</h3>
 <p><a href="https://www.youtube.com/playlist?list=PLZdtKRrh2n7tmMYi6A9fkfk5Xw8SNMSHK">Yogabatics</a> - <a href="https://maps.google.com/maps/ms?ie=UTF8&oe=UTF8&msa=0&msid=214237272004176694934.0004e452a8e7678feb643">World Map</a> - <a href="http://www.mindbodygreen.com/0-7723/8-things-you-should-know-about-acroyoga.html">Things to know</a></p>
