changed formating and locations of link

--- a/index.html
+++ b/index.html
@@ -95,15 +95,19 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 <h1>Acroyoga Ottawa Event Calendar</h1>
 <h2>Acrobatics with a yogic consciousness</h2>
 <div id='loading' style='display:none'>loading...</div>
-<div id='calendar'></div>
-<div id='footer'> 
+<div id='calendar'>
+	<div align="right"><a href='http://www.google.com/calendar/ical/gho.st_19b0g4d2m46ta2l2gf8olt1k6o%40group.calendar.google.com/public/basic.ics'>Add to your calendar</a> - <a href='http://chadnorwood.com/gcm/?gc=gho.st_19b0g4d2m46ta2l2gf8olt1k6o@group.calendar.google.com'>view as map</a>
+	</div>
+</div>
+<div id='footer'>
 <h3>Definitions</h3>
-<p>Jams: Informal gatherings to play and practice, no formal instruction or start time. Turn up whenever you want.<br>
-Classes: Weekly formal instruction to develop your Acroyoga practice.<br>
-Workshops: A more indepth Acroyoga experience.</p>
+<p><b>Jams</b>: Informal gatherings to play and practice, no formal instruction or start time. Turn up whenever you want.<br>
+<b>Classes</b>: Weekly formal instruction to develop your Acroyoga practice.<br>
+<b>Workshops</b>: A more indepth Acroyoga experience.<br>
+<b>Preformances</b>: Members of our community preforming to the public.</p>
 
 <h3>Social</h3>
-<p><a href="https://www.facebook.com/groups/AcroyogaOttawa/">Facebook</a> - <a href='http://www.google.com/calendar/ical/gho.st_19b0g4d2m46ta2l2gf8olt1k6o%40group.calendar.google.com/public/basic.ics'>Google Calendar</a> - <a href='http://chadnorwood.com/gcm/?gc=gho.st_19b0g4d2m46ta2l2gf8olt1k6o@group.calendar.google.com'>Events map</a> - <a href="https://twitter.com/AcroyogaOttawa">Twitter</a> - <a href="http://www.pinterest.com/gregology/acroyoga-ottawa/">Pinterest</a></p>
+<p><a href="https://www.facebook.com/groups/AcroyogaOttawa/">Facebook</a> - <a href="https://twitter.com/AcroyogaOttawa">Twitter</a> - <a href="http://www.pinterest.com/gregology/acroyoga-ottawa/">Pinterest</a></p>
 
 <h3>References</h3>
 <p><a href="https://www.youtube.com/playlist?list=PLZdtKRrh2n7tmMYi6A9fkfk5Xw8SNMSHK">Yogabatics</a> - <a href="https://maps.google.com/maps/ms?ie=UTF8&oe=UTF8&msa=0&msid=214237272004176694934.0004e452a8e7678feb643">World Map</a> - <a href="http://www.mindbodygreen.com/0-7723/8-things-you-should-know-about-acroyoga.html">Things to know</a></p>
