--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 <p><b>Jams</b>: Informal gatherings to play and practice, no formal instruction or start time. Turn up whenever you want.<br>
 <b>Classes</b>: Weekly formal instruction to develop your Acroyoga practice.<br>
 <b>Workshops</b>: A more indepth Acroyoga experience.<br>
-<b>Preformances</b>: Members of our community preforming to the public.</p>
+<b>Performances</b>: Members of our community performing to the public.</p>
 
 <h3>Social</h3>
 <p><a href="https://www.facebook.com/groups/AcroyogaOttawa/">Facebook</a> - <a href="https://twitter.com/AcroyogaOttawa">Twitter</a> - <a href="http://www.pinterest.com/gregology/acroyoga-ottawa/">Pinterest</a></p>
