--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 </head>
 <body>
 <h1>Acroyoga Ottawa Event Calendar</h1>
-<h2>Acrobatics with a yogic consciousness</h2>
+<h2>Acrobatics with a yogic consciousness in a beautiful city</h2>
 <div id='loading' style='display:none'>loading...</div>
 <div id='calendar'>
 	<div align="right"><a href='http://www.google.com/calendar/ical/gho.st_19b0g4d2m46ta2l2gf8olt1k6o%40group.calendar.google.com/public/basic.ics'>Add to your calendar</a> - <a href='http://chadnorwood.com/gcm/?gc=gho.st_19b0g4d2m46ta2l2gf8olt1k6o@group.calendar.google.com'>view as map</a>
