--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
 		margin-right: auto ;
 		}
 
+	* {
+	    font-family: Helvetica, sans-serif;
+	  }
+
 </style>
 <script type="text/javascript">
     var feed = new Instafeed({
