--- a/index.html
+++ b/index.html
@@ -119,6 +119,6 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 <h2>#AcroyogaOttawa Instagram Feed</h2>
 <div id="instafeed"></div>
 </div>
-<h5>Created by Diana Lam and Greg Clarke of <a href='http://SmileyOm.org'>Smiley Om Yoga</a>.</h5>
+<h5>Created by Diana Lam and Greg Clarke of <a href='http://SmileyOm.com'>Smiley Om</a>.</h5>
 </body>
 </html>
