--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <!-- iOS Safari -->
   <meta name="apple-mobile-web-app-status-bar-style" content="#4285f4">
 
+  <meta name="google-site-verification" content="HZ5CfnPXCnUSzz2WF5ImEKRJFjgR4V33VU1r5rB-dOs" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ site.title }}</title>
 	<meta name="keywords" content="{{ site.keywords }}">
